# systemd-journal-logger.rs

./: Cargo.toml  README.md
src/: memfd.rs
tests/: log_to_journal.rs
