[package]
name = "systemd-journal-logger-memfd-syscall"
version = "2.0.1"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>", "Daniel Estevez <daniel@destevez.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/daniestevez/systemd-journal-logger.rs"
documentation = "https://docs.rs/systemd-journal-logger-memfd-syscall"
description = "Systemd journal logger for the log facade (fork supporting older glibc versions) DEPRECATED"
categories = ["development-tools::debugging"]
keywords = ["logging", "systemd", "journal"]
edition = "2021"
rust-version = "1.71"

[badges]
maintenance = { status = "deprecated" }

[dependencies]
# libsystemd isn't no_std compatible so we can conveniently enable log's std
# feature unconditionally.  We require std for the set_boxed_logger field in
# init_with_extra_fields.
log = { version = "^0.4", features = ["std", "kv_unstable"] }
libc = "0.2.148"

[dev-dependencies]
similar-asserts = "1.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.86"
rand = "0.8.5"
log = { version = "0.4.1", features = ["kv_unstable_std"] }
retry = "2.0.0"

[[test]]
name = "journal_stream"
harness = false

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true
sign-commit = true
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
# Github actions checks this for us.
verify = false
